--- a/src/styles/todo-list.css
+++ b/src/styles/todo-list.css
@@ -104,6 +104,10 @@
   display: block;
 }
 
+.completed {
+  text-decoration: line-through;
+}
+
 /*
 	Hack to remove background from Mobile Safari.
 	Can't use it globally since it destroys checkboxes in Firefox
